--- a/app/containers/HomePage/playstyle.css
+++ b/app/containers/HomePage/playstyle.css
@@ -6,8 +6,8 @@
     font-family: inherit;
     width: 100%;
     padding: 10px 15px;
-    background-color: rgb(205, 245, 103);
-    border: 2.5px solid black;
+    background-color: #1d1a28;
+    border: 2.5px solid #564f6f;
   }
   .rhap_container:focus:not(:focus-visible) {
     outline: 0;
@@ -76,7 +76,7 @@
   }
   
   .rhap_time {
-    color: #333;
+    color: #d1d7e0;
     font-size: 16px;
     user-select: none;
     -webkit-user-select: none;
@@ -88,7 +88,7 @@
     z-index: 0;
     width: 100%;
     height: 5px;
-    background-color: #ffd0d5;
+    background-color: #564f6f;
     border-radius: 2px;
   }
   
@@ -96,7 +96,7 @@
     height: 100%;
     position: absolute;
     z-index: 2;
-    background-color: #ffa0aa;
+    background-color: #564f6f;
     border-radius: 2px;
   }
   
@@ -108,7 +108,7 @@
     height: 100%;
     position: absolute;
     z-index: 1;
-    background-color: #ffd0d5;
+    background-color: #564f6f;
     border-radius: 2px;
   }
   
@@ -120,7 +120,7 @@
     height: 20px;
     margin-left: -10px;
     top: -8px;
-    background: #ff6675;
+    background: #802bb1;
     border-radius: 50px;
   }
   
@@ -141,7 +141,7 @@
     font-size: 26px;
     width: 26px;
     height: 26px;
-    color: #ff6675;
+    color: #802bb1;
     margin-right: 6px;
   }
   
@@ -154,7 +154,7 @@
   
   .rhap_main-controls-button {
     margin: 0 3px;
-    color: #ff6675;
+    color: #802bb1;
     font-size: 35px;
     width: 35px;
     height: 35px;
@@ -178,7 +178,7 @@
     font-size: 26px;
     width: 26px;
     height: 26px;
-    color: #ff6675;
+    color: #802bb1;
     margin-right: 6px;
   }
   
@@ -205,7 +205,7 @@
     position: relative;
     width: 100%;
     height: 4px;
-    background: #ffd0d5;
+    background: #564f6f;
     border-radius: 2px;
   }
   
@@ -217,7 +217,7 @@
     margin-left: -6px;
     left: 0;
     top: -4px;
-    background: #ff6675;
+    background: #802bb1;
     opacity: 0.9;
     border-radius: 50px;
     cursor: pointer;
