stlye changes, code refactor

--- a/app/containers/HomePage/playstyle.css
+++ b/app/containers/HomePage/playstyle.css
@@ -6,7 +6,7 @@
     font-family: inherit;
     width: 100%;
     padding: 10px 15px;
-    background-color: #1d1a28;
+    background-color: #030011;
     border: 2.5px solid #564f6f;
   }
   .rhap_container:focus:not(:focus-visible) {
